# tarea

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  build_cxx_tests.sh  build_script.sh  clean.sh  compileC.sh  main.cpp  pyproject.toml  setup.py
.github/workflows/: pipeline.yaml
bindings/: CMakeLists.txt  sort_array.pyx
include/: sort_array.h
sort_array/: CMakeLists.txt  __init__.py
src/: CMakeLists.txt  sort_array.cpp
tests/: CMakeLists.txt  performance_test.py  test_runner.c  test_sort_array.c
tests/cxx/: test_runner.c  test_sort_array.c
tests/python/: test_sort_array.py
